--- a/.github/workflows/fetch_data.yml
+++ b/.github/workflows/fetch_data.yml
@@ -1,9 +1,9 @@
 name: Fetch Data from Google Sheets
 
 on:
-  workflow_dispatch:  # Ręczne uruchomienie z sekcji Actions
+  workflow_dispatch:
   schedule:
-    - cron: '0 * * * *'  # Harmonogram co godzinę (dostosuj w razie potrzeby)
+    - cron: '0 * * * *'  # Harmonogram co godzinę
 
 jobs:
   fetch_data:
@@ -18,33 +18,17 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'  # Dostosuj wersję, jeśli konieczne
+          python-version: '3.x'
 
       # 3. Instalacja zależności
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install gspread oauth2client
 
       # 4. Uruchomienie skryptu do pobrania danych z Google Sheets
       - name: Run data fetching script
         env:
           GOOGLE_SHEETS_CREDENTIALS: ${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}
         run: |
-          import json
-          import gspread
-          from oauth2client.service_account import ServiceAccountCredentials
-
-          # Konfiguracja połączenia z API
-          credentials_dict = json.loads('${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}')
-          creds = ServiceAccountCredentials.from_json_keyfile_dict(
-              credentials_dict,
-              scopes=["https://www.googleapis.com/auth/spreadsheets"]
-          )
-          client = gspread.authorize(creds)
-
-          # Odczyt danych z arkusza
-          sheet_id = 1qLz321mYARmPy-PmN1dVsYGWY47WLq9MzjAavGhJ7q8
-          sheet = client.open_by_key(sheet_id).sheet1
-          data = sheet.get_all_records()
-          print(data)
+          python fetch_data.py
