--- a/.github/workflows/fetch_data.yml
+++ b/.github/workflows/fetch_data.yml
@@ -3,10 +3,8 @@ name: Fetch Data from Google Sheets
 on:
   push:
     branches:
-      - main  # Uruchamia workflow przy pushu na branch main
-  workflow_dispatch:  # Umożliwia ręczne uruchomienie z sekcji Actions
-  schedule:
-    - cron: '0 * * * *'  # Uruchamia workflow co godzinę
+      - main
+  workflow_dispatch:
 
 jobs:
   fetch_data:
@@ -23,11 +21,11 @@ jobs:
         with:
           python-version: '3.x'
 
-      # 3. Instalacja zależności
+      # 3. Instalacja zależności z requirements.txt
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install gspread oauth2client
+          pip install -r requirements.txt
 
       # 4. Uruchomienie skryptu do pobrania danych z Google Sheets
       - name: Run data fetching script
