--- a/.github/workflows/fetch_data.yml
+++ b/.github/workflows/fetch_data.yml
@@ -5,31 +5,33 @@ on:
     branches:
       - main
   workflow_dispatch:
+  schedule:
+    - cron: '0 * * * *'
 
 jobs:
   fetch_data:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout repozytorium
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Ustawienie środowiska Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      # 3. Instalacja zależności z requirements.txt
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # 4. Uruchomienie skryptu do pobrania danych z Google Sheets
       - name: Run data fetching script
         env:
           GOOGLE_SHEETS_CREDENTIALS: ${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}
         run: |
           python fetch_data.py
+
+      - name: Display report
+        run: |
+          cat report.md
