--- a/.github/workflows/fetch_data.yml
+++ b/.github/workflows/fetch_data.yml
@@ -31,14 +31,12 @@ jobs:
           python fetch_data.py
 
       - name: Commit report to repository
-        env:
-          GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
         run: |
           git config --local user.email "jancewiczjerzy@gmail.com"
           git config --local user.name "JerzyJancewicz"
           git add report.md
           git commit -m "Add data cleaning report" || echo "No changes to commit"
-          git push https://x-access-token:${GIT_TOKEN}@github.com/JerzyJancewicz/Lab-2_s25366.git HEAD:main
+          git push
 
       - name: Check if the workflow was triggered by this commit
         if: github.event_name == 'push' && startsWith(github.event.head_commit.message, 'Add data cleaning report')
