add log.txt to github and finished the task

--- a/.github/workflows/fetch_data.yml
+++ b/.github/workflows/fetch_data.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           git config --local user.email "jancewiczjerzy@gmail.com"
           git config --local user.name "JerzyJancewicz"
-          git add report.md
+          git add report.md log.txt
           git commit -m "Add data cleaning report" || echo "No changes to commit"
           git push
 
